[package]
name = "only_one"
version = "0.1.0"
edition = "2024"

authors = ["Ben Przybyszewski "]
description = "Provides the OnlyOne trait, which allows less nesting when chaining results"
license = "MIT OR Apache-2.0"
readme = "README.md"

documentation = "https://docs.rs/only_one"
repository = "https://github.com/przb/only-one"
keywords = ["error", "result", "chaining", "nested"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
exclude = [".gitignore"]

[dependencies]

[dev-dependencies]
thiserror = "2.0.17"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

missing_errors_doc = { level = "allow", priority = 1 }
